--- a/app.json
+++ b/app.json
@@ -49,5 +49,7 @@
       "desc": "您的位置信息将用来为您提供更好的数据搜索使用"
     }
   },
-  "usingComponents": {}
+  "usingComponents": {
+    "icon": "components/icon/icon"
+  }
 }
