--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.3",
-	"appid": "wxd69c8ff630f18b95",
+	"appid": "wxcaed80e9a244a205",
 	"projectname": "3dclothing-web",
 	"debugOptions": {
 		"hidedInDevtools": []
